Fixed hero image (doesn't move on scroll); added fade-in animation; fixed container/alignment issues; changed font/applied across page; removed additional 'more about me' section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,16 +3,15 @@
 /* Variables */
 
 :root {
-  --font-family: "Roboto", sans-serif;
-  --normal-font: 400;
-  --bold-font: 700;
-  --bolder-font: 900;
+  --font-family: 'Readex Pro', sans-serif;
   --bg-color: #fcfcfc;
-  --primary-color: #4756df;
-  --secondary-color: #ff7235;
+  --bg-overlay: rgba(17, 0, 250, 0.2);
+  --primary-color: #2b348b;
+  --secondary-color: #c64f00;
   --primary-shadow: #8b8eaf;
   --secondary-shadow: #a17a69;
-  --botom-margin: 0.5rem;
+  --text-color: #fcfcfc;
+  --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
@@ -30,6 +29,10 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Readex Pro', sans-serif;
+}
+
 ul {
   list-style-type: none;
 }
@@ -44,7 +47,7 @@ a:hover {
 }
 
 body {
-  font-family: var(font-family);
+    
 }
 
 nav {
@@ -54,14 +57,10 @@ nav {
   z-index: 1;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 1.5rem 3.5rem;
   background-color: var(--bg-color);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-}
-
-nav h1 {
-  color: var(--primary-color);
 }
 
 nav a {
@@ -96,44 +95,73 @@ nav ul li {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2.5rem;
-  max-width: 68.75rem;
   margin: auto;
+  height: 100vh;
+  background-size: cover;
+  animation: bgFadeIn 3s ease-in both;
 }
 
-.hero img {
-  height: 37.5rem;
-  width: 37.5rem;
+.hero::before {
+  background: linear-gradient(var(--bg-overlay), var(--bg-overlay)),
+    url("/assets/images/john-towner-FD_sabE544U-unsplash.jpg");
+  background-color: #cccccc;
+  background-attachment: fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  bottom: 0;
+  content: " ";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+@keyframes bgFadeIn {
+  0% {
+    background-color: white;
+  }
+  100% {
+    background-color: rgba(255, 255, 255, 0);
+  }
+}
+
+.hero h1 {
+  color: var(--text-color);
+  font-size: 4rem;
+}
+
+#bio-container {
+    display: flex;
+    justify-content: center;
 }
 
 .bio {
-  height: 100%;
-  width: 25rem;
   padding: 0.625rem;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.bio h1 {
+.bio_container {
+  padding: 0.625rem;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bio h2 {
   margin-bottom: var(--bottom-margin);
-}
-
-.bio p {
-  line-height: var(--line-height);
-  padding: 0.3rem 0;
-}
-
-.more-about {
-  background-color: var(--bg-color);
-  padding: 1rem 6rem;
-}
-
-.more-about h2 {
-  margin-bottom: var(--botom-margin);
   text-align: center;
 }
 
-.more-about p {
+.bio p {
   line-height: var(--line-height);
   padding: 0.4rem;
 }
@@ -225,10 +253,13 @@ nav ul li {
   font-size: 0.875rem;
   outline: none;
   padding: 0.5rem;
+  font-family: 'Readex Pro', sans-serif;
+  color: var(--primary-color)
 }
 
 .input-field::placeholder {
-  color: var(--primary-color);
+    font-family: 'Readex Pro', sans-serif;
+    color: var(--primary-color);
 }
 
 .submit-btn {
@@ -239,13 +270,16 @@ nav ul li {
   border: 2px solid var(--primary-color);
   border-radius: 5px;
   font-size: 1rem;
-  font-weight: var(--bold-font);
+  font-family: 'Readex Pro', sans-serif;
+  font-weight: bold;
   transition: var(--transition);
+  color: var(--primary-color)
 }
 
 .submit-btn:hover {
   background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
+  color: var(white);
   cursor: pointer;
 }
 
@@ -274,6 +308,7 @@ footer {
   nav {
     padding: 1.5rem 1rem;
   }
+
   nav ul {
     position: fixed;
     background-color: var(--bg-color);
@@ -290,7 +325,7 @@ footer {
     margin: 8px;
   }
 
-  .burger-menu {
+  #burger-menu {
     display: block;
   }
 
@@ -299,33 +334,29 @@ footer {
   }
 
   .hero {
-    margin-top: -4rem;
+    display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 0;
   }
 
-  .hero img {
-    height: 37.5rem;
-    width: 30rem;
+  .hero h1{
+      text-align: center;
   }
 
   .bio {
-    margin-top: 3rem;
-    width: 20.5rem;
-  }
-
-  .more-about {
     margin-top: 2rem;
     padding: 1rem 3.5rem;
   }
 
-  .more-about h2 {
+  .bio h2 {
     text-align: center;
   }
 
-  .more-about p {
+  .bio p {
     text-align: justify;
   }
+
   .projects-container {
     flex-direction: column;
   }
@@ -339,10 +370,6 @@ footer {
 }
 
 @media screen and (max-width: 420px) {
-  .hero img {
-    height: 37.5rem;
-    width: 23rem;
-  }
 
   .bio {
     width: 18.3rem;
